Got the basics of a camera, fixed the config stuff and split it out to be easier to figure out.  Cleaned up a bunch of stuff.

--- a/projects/SideProject/SideProject.vcxproj
+++ b/projects/SideProject/SideProject.vcxproj
@@ -99,21 +99,25 @@
     <ClInclude Include="..\..\external\nowide\nowide\cstdio.h" />
     <ClInclude Include="..\..\external\nowide\nowide\fstream.h" />
     <ClInclude Include="..\..\external\nowide\nowide\streambuf.h" />
+    <ClInclude Include="..\..\source\Engine\BaseConfig.h" />
     <ClInclude Include="..\..\source\Engine\BasicMacros.h" />
     <ClInclude Include="..\..\source\Engine\Camera.h" />
     <ClInclude Include="..\..\source\Engine\DirectXGraphics.h" />
     <ClInclude Include="..\..\source\Engine\FileIO.h" />
+    <ClInclude Include="..\..\source\Engine\GraphicsComponent.h" />
     <ClInclude Include="..\..\source\Engine\Image.h" />
     <ClInclude Include="..\..\source\Engine\IPlatform.h" />
     <ClInclude Include="..\..\source\Engine\IGraphics.h" />
     <ClInclude Include="..\..\source\Engine\JSONConfig.h" />
     <ClInclude Include="..\..\source\Engine\Logging.h" />
+    <ClInclude Include="..\..\source\Engine\MathConstants.h" />
     <ClInclude Include="..\..\source\Engine\Matrix3.h" />
     <ClInclude Include="..\..\source\Engine\Matrix4.h" />
     <ClInclude Include="..\..\source\Engine\MemoryManager.h" />
     <ClInclude Include="..\..\source\Engine\OpenGLGraphics.h" />
     <ClInclude Include="..\..\source\Engine\Shader.h" />
     <ClInclude Include="..\..\source\Engine\Time.h" />
+    <ClInclude Include="..\..\source\Engine\Vector2.h" />
     <ClInclude Include="..\..\source\Engine\Vector3.h" />
     <ClInclude Include="..\..\source\Engine\Vector4.h" />
     <ClInclude Include="..\..\source\Engine\WindowsPlatform.h" />
@@ -123,10 +127,13 @@
     <ClCompile Include="..\..\external\jsoncpp\jsoncpp.cpp" />
     <ClCompile Include="..\..\external\nowide\src\convert.cpp" />
     <ClCompile Include="..\..\external\nowide\src\streambuf.cpp" />
+    <ClCompile Include="..\..\source\Engine\BaseConfig.cpp" />
     <ClCompile Include="..\..\source\Engine\BasicMacros.cpp" />
     <ClCompile Include="..\..\source\Engine\Camera.cpp" />
     <ClCompile Include="..\..\source\Engine\DirectXGraphics.cpp" />
     <ClCompile Include="..\..\source\Engine\FileIO.cpp" />
+    <ClCompile Include="..\..\source\Engine\GraphicsComponent.cpp" />
+    <ClCompile Include="..\..\source\Engine\IGraphics.cpp" />
     <ClCompile Include="..\..\source\Engine\Image.cpp" />
     <ClCompile Include="..\..\source\Engine\IPlatform.cpp" />
     <ClCompile Include="..\..\source\Engine\JSONConfig.cpp" />
@@ -137,6 +144,7 @@
     <ClCompile Include="..\..\source\Engine\OpenGLGraphics.cpp" />
     <ClCompile Include="..\..\source\Engine\Shader.cpp" />
     <ClCompile Include="..\..\source\Engine\Time.cpp" />
+    <ClCompile Include="..\..\source\Engine\Vector2.cpp" />
     <ClCompile Include="..\..\source\Engine\Vector3.cpp" />
     <ClCompile Include="..\..\source\Engine\Vector4.cpp" />
     <ClCompile Include="..\..\source\Engine\WindowsPlatform.cpp" />
